Added the python files

--- a/1.html
+++ b/1.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg  navbar-dark bg-dark-red">
+  <nav id="navbar" class="navbar navbar-expand-lg  navbar-dark bg-dark-red">
     <h1 class="logo">logo</h1>
     <div class="container-fluid">
       <a class="navbar-brand" href="#">MindFuel</a>
@@ -58,8 +58,9 @@
     <div class="home-content">
       <h3>Welcome to MindFuel</h3>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia ullam illo deserunt commodi! Sint eius deleniti perferendis modi odio quae facere expedita debitis architecto, ut obcaecati dolores, ad sed fugiat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo rerum corrupti temporibus laudantium magni nemo sit iste dolorem quae nihil reiciendis atque, illum iusto accusamus quidem eligendi recusandae impedit blanditiis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, dolorum. Ipsam reprehenderit, corrupti eum hic dolore fugit. Facilis illo error aut omnis. Corporis voluptas at suscipit perspiciatis pariatur eius excepturi.</p>
-
-      <button type="button" onclick="location.href='https://1strep-tvajcaytxb7cjl5ncscnyd.streamlit.app/'"><span></span>Click</button>
+      <button type="button" onclick="window.open('https://1strep-tvajcaytxb7cjl5ncscnyd.streamlit.app/', '_blank')">
+        <span></span>Click
+    </button>
     </div>
     <img src="purple-mind.png" width="900" alt="">
   </div>
@@ -109,6 +110,9 @@
    </div>
  </div>
  
+<div class="spacer layer1"></divspacer></div>
+
+
  <div class="about text-center">
   <h1 class="abtsection">About Us</h1>
   <h2>Who we are</h2>
